# simple_ai

./: .README.md.swp  .gitignore  01-introduction.md  02-setup-and-dependencies.md  03-configuration.md  04-data-preparation.md  05-preprocessing.md  06-augmentation.md  07-training.md  08-evaluation.md  D3_Hands_on_2026_v2.ipynb  D4_Hackathon_(中文)_2026_v2.ipynb  README.md  config.yaml  config_d4_hackathon.yaml  dataset_info_d3_liver_ct.yaml  dataset_info_d4_hackathon.yaml  environment.md  example.ipynb  experiments.tsv  pyproject.toml  requirements-vlm.txt  requirements.txt
providers/: anthropic.json  deepseek.json  groq.json  openai.json  openrouter.json  together.json
src/: autoresearch.py  autoresearch_cli.py  autoresearch_paths.py  autoresearch_save.py  autoresearch_serve.py  autoresearch_setup.py  cli.py  cli_help.py  config.py  data.py  defaults.py  env_setup.py  evaluate.py  git_helpers.py  main.py  model.py  prepare_data.py  program.md  train.py  transforms.py  utils.py
vlm/: README.md  __init__.py  cli.py  config.py  data.py  evaluate.py  infer.py  models.py  prompts.py  registry.py  save.py  train.py
vlm/configs/: atelectasis.yaml  cardiomegaly.yaml  colon_polyps.yaml  diabetic_retinopathy.yaml  melanoma.yaml
