[project]
name = "simple-ai"
version = "2026.2.0"
description = "Hands-on: Classification of Liver With or Without Tumor on CT Images (CNN Classification)"
requires-python = ">=3.10"
dependencies = [
    "monai>=1.3.0",
    "timm>=0.9.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "Pillow>=9.0.0",
    "tqdm>=4.65.0",
    "gdown>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
]
notebook = [
    "matplotlib-inline",
    "ipykernel",
    "jupyter",
]

[tool.uv]
default-extras = ["notebook"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
