[project]
name = "simple-ai"
version = "2026.2.0"
description = "Hands-on: CNN image classification pipeline (binary/multi-class) with configurable model, optimizer, loss, and augmentations"
requires-python = ">=3.10"
dependencies = [
    "monai>=1.3.0",
    "nibabel>=5.0.0",
    "timm>=0.9.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "matplotlib-inline",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "Pillow>=9.0.0",
    "tqdm>=4.65.0",
    "gdown>=5.0.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "ipykernel",
    "jupyter",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
simple_ai_train = "src.cli:train_cmd"
simple_ai_train_data = "src.prepare_data:main"
simple_ai_autoresearch_train = "src.autoresearch_cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
